--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -60,13 +60,13 @@
         </p>
         <img
           src="../imgs/juegos de equipo.jpg"
-          class="juegos-de-equipos"
+          class="-carreras-"
           alt="juegos-de-equipos"
         />
-        <img src="../imgs/bailes.jpg" class="-bailes-" alt="bailes" />
+        <img src="../imgs/bailes.jpg" class="-carreras-" alt="bailes" />
         <img
           src="../imgs/cuentos y canciones.jpg"
-          class="cuentos-y-canciones"
+          class="-carreras-"
           alt="cuentos-y-canciones"
         />
         <h3>Pileta</h3>
