--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -72,7 +72,7 @@
         <h3>Pileta</h3>
         <img
           src="../imgs/juegospileta.jpg"
-          class="-juegospileta-"
+          class="-pileta-"
           alt="juegos-pileta"
         />
         <p>
@@ -80,19 +80,15 @@
         </p>
         <img src="../imgs/pileta.jpg" class="-pileta-" alt="pileta" />
         <h4>Campamento + Jornada extendida</h4>
-        <img
-          src="../imgs/campamento.jpg"
-          class="-campamento-"
-          alt="campamento"
-        />
+        <img src="../imgs/campamento.jpg" class="-carreras-" alt="campamento" />
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime,
           beatae.
         </p>
-        <img src="../imgs/fogon.jpg" class="-fogon-" alt="fogon" />
+        <img src="../imgs/fogon.jpg" class="-carreras-" alt="fogon" />
         <img
           src="../imgs/jornada extendida.jpg"
-          class="-jornada-extendida-"
+          class="-carreras-"
           alt="-jornada-extendida-"
         />
       </div>
