--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -72,13 +72,9 @@
       </p>
       <div>
         <img src="../imgs/club.jpg" class="-club-" alt="club" />
-        <img src="../imgs/campamento.jpg" class="-carpas-" alt="campamento" />
+        <img src="../imgs/campamento.jpg" class="-club-" alt="campamento" />
         <img src="../imgs/cancha de volley.jpg" class="-volley-" alt="volley" />
-        <img
-          src="../imgs/campamento2.jpg"
-          class="-campamento2-"
-          alt="campamento"
-        />
+        <img src="../imgs/campamento2.jpg" class="-volley-" alt="campamento" />
         <img src="../imgs/pileta.jpg" class="-pileta2-" alt="pileta" />
       </div>
     </section>
