--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,9 +52,9 @@
       <div>
         <img src="../imgs/walter.jpg" class="-walter-" alt="Encargado" />
         <p>Walter (Encargado)</p>
-        <img src="../imgs/cristian.jpg" class="-cris-" alt="Coordinador" />
+        <img src="../imgs/cristian.jpg" class="-walter-" alt="Coordinador" />
         <p>Cristian (Coordinador)</p>
-        <img src="../imgs/Mauro.jpeg" class="-mauro-" alt="Coordinador" />
+        <img src="../imgs/Mauro.jpeg" class="-walter-" alt="Coordinador" />
         <p>Mauro (Coordinador)</p>
       </div>
     </section>
@@ -83,7 +83,7 @@
     </fieldset>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.1027093826146!2d-58.36753488461442!3d-34.62684466622952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334cea4dcc6bf%3A0xb52e97db0ef9bd74!2sAsociacion%20Vecinal%20Catalinas%20Sur!5e0!3m2!1ses!2sar!4v1675185870499!5m2!1ses!2sar"
-      class="-ubicacion-"
+      class="-volley-"
       style="border: 0"
       allowfullscreen=""
       loading="lazy"
