--- a/index.html
+++ b/index.html
@@ -4,84 +4,120 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-widthhead, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" href="imgs/Logo.png" type="image/x-icon" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="CSS/style.css" />
     <title>Colonia Catalinas Sur</title>
   </head>
   <body>
-    <div class="container-fluid"></div>
-    <div class="row"></div>
-    <div class="col-lg-12 col-xs-12"></div>
-    <header>
-      <div class="container">
-        <div class="row"></div>
-        <div class="header_1">
-          <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a class="nav__link" href="index.html">inicio</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="pages/nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="pages/actividades.html">Actividades</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="pages/informacion.html">Información</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="pages/contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </header>
-    <main>
-      <section>
+    <div class="container-fluid">
+      <header>
         <div class="container">
           <div class="row"></div>
-          <img src="imgs/Logo.png" class="-logo-" alt="Logo de la empresa" />
-          <h1>Colonia Catalinas Sur</h1>
-        <p>
-          Bienvenidos a nuestra Colonia de vacaciones Catalina Sur! Un espacio
-          recreativo para que los chicos puedan divertirse y pasar una temporada
-          repleta de experiencias únicas. Contamos con materiales para realizar
-          todo tipo de juegos, dos piletas para actividades en el agua y mucho
-          más para que pases el mejor verano con nosotros!
-        </p>
-        <div>
-        <div class="container"></div>
-        <div class="row"></div>
-        <div class="col-md-6"></div>
-          <img src="imgs/grupal2023.jpeg" class="grupal2023" alt="fotogrupal2023" />
-          <img src="imgs/equipo jefes.jpg" class="equipo-jefes" alt="equipo-jefes" />
+          <div class="header_1">
+            <nav class="navbar">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="index.html">inicio</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="pages/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="pages/actividades.html"
+                    >Actividades</a
+                  >
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="pages/informacion.html"
+                    >Información</a
+                  >
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="pages/contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-8">
+              <img
+                src="imgs/Logo.png"
+                class="-logo-"
+                alt="Logo de la empresa"
+              />
+            </div>
+            <h1>Colonia Catalinas Sur</h1>
+            <p>
+              Bienvenidos a nuestra Colonia de vacaciones Catalina Sur. Un
+              espacio recreativo para que los chicos puedan divertirse y pasar
+              una temporada repleta de experiencias únicas. Contamos con
+              materiales para realizar todo tipo de juegos, dos piletas para
+              actividades en el agua y mucho más para que pases el mejor verano
+              con nosotros.
+            </p>
+            <div>
+              <img
+                src="imgs/grupal2023.jpeg"
+                class="grupal2023"
+                alt="fotogrupal2023"
+              />
+              <img
+                src="imgs/equipo jefes.jpg"
+                class="equipo-jefes"
+                alt="equipo-jefes"
+              />
+            </div>
+          </div>
         </div>
       </section>
-    </main>
-    <footer>
-      <div>
-        <div class="container"></div>
-    <div class="row"></div>
-    <div class="col-md-12"></div>
-      <p>Buscanos en las redes</p>
-        <img src="imgs/facebook.png" class="-facebook-" alt="facebook" />
-      <p>Colonia de vacaciones Catalinas Sur</p>
-      <img src="imgs/instagram.png" class="-facebook-" alt="instagram" />
-      <p>@coloniacatalinassur</p>
-      <img src="imgs/gmail.png" class="-facebook-" alt="gmail" />
-      <p>coloniacatalinas@gmail.com</p>
-      </div>
-      <div class="footer-bottom">
-        &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada por
-        Enriqueanzaldi
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-l-4">
+              <p>Buscanos en las redes</p>
+              <img src="imgs/facebook.png" class="-facebook-" alt="facebook" />
+              <p>Colonia de vacaciones Catalinas Sur</p>
+              <img
+                src="imgs/instagram.png"
+                class="-facebook-"
+                alt="instagram"
+              />
+              <p>@coloniacatalinassur</p>
+              <img src="imgs/gmail.png" class="-facebook-" alt="gmail" />
+              <p>coloniacatalinas@gmail.com</p>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
+          por Enriqueanzaldi
+        </div>
+      </footer>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
