--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -21,83 +21,84 @@
     <title>Nosotros</title>
   </head>
   <body>
-    <div class="container-fluid"></div>
-    <div class="row"></div>
-    <div class="col-lg-12 col-xs-12"></div>
-    <header>
-      <div class="container">
-        <div class="row"></div>
-        <div class="header_1">
-          <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a class="nav__link" href="../index.html">inicio</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="actividades.html">Actividades</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="informacion.html">Información</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </nav>
+    <div class="container-fluid">
+      <header>
+        <div class="container">
+          <div class="row"></div>
+          <div class="header_1">
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="../index.html">inicio</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="actividades.html">Actividades</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="informacion.html">Información</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
-      </div>
-    </header>
-    <div class="container">
-      <div class="row"></div>
-      <img src="../imgs/Logo.png" class="-logo-" alt="Logo de la empresa" />
-    </div>
-    <section>
-      <h1>Nosotros</h1>
-      <h2>STAFF</h2>
-      <div class="container">
-        <label for="STAFF"></label>
-        <textarea name="STAFF" id="" cols="30" rows="7">
-El STAFF de profesores está en cabezada por 2 coordinadores + 2 profesores por grupo, un hombre y una mujer, además tenemos ayudantes que auxilian a los profes en sus actividades.</textarea
-        >
-        <textarea name="Guardavidas" id="" cols="30" rows="7">
-Contamos con 4 a 5 guardavidas que se van turnando en duplas para mayor seguridad de los niños en la pileta.</textarea
-        >
-        <textarea name="Doctora" id="" cols="30" rows="7">
-Tenemos una doctora que se encuentra a disponibilidad del establecimiento para cualquier emergencia que suceda en el horario de colonia.</textarea
-        >
-      </div>
-    </section>
-    <section>
+      </header>
       <div class="container">
         <div class="row"></div>
-        <div class="col-md-6"></div>
-        <img
-          src="../imgs/grupal2023.jpeg"
-          class="grupal2023"
-          alt="fotogrupal2023"
-        />
+        <img src="../imgs/Logo.png" class="-logo-" alt="Logo de la empresa" />
       </div>
-    </section>
-    <footer>
-      <p>Buscanos en las redes</p>
-      <div>
-        <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
-      </div>
-      <p>Colonia de vaciones Catalinas Sur</p>
-      <div>
-        <img src="../imgs/instagram.png" class="-facebook-" alt="instagram" />
-      </div>
-      <p>@coloniacatalinassur</p>
-      <div><img src="../imgs/gmail.png" class="-facebook-" alt="gmail" /></div>
-      <p>coloniacatalinas@gmail.com</p>
-      <div class="footer-bottom">
-        &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada por
-        Enriqueanzaldi
-      </div>
-    </footer>
+      <section>
+        <h1>Nosotros</h1>
+        <h2>STAFF</h2>
+        <div class="container">
+          <label for="STAFF"></label>
+          <textarea name="STAFF" id="" cols="30" rows="7">
+  El STAFF de profesores está en cabezada por 2 coordinadores + 2 profesores por grupo, un hombre y una mujer, además tenemos ayudantes que auxilian a los profes en sus actividades.</textarea
+          >
+          <textarea name="Guardavidas" id="" cols="30" rows="7">
+  Contamos con 4 a 5 guardavidas que se van turnando en duplas para mayor seguridad de los niños en la pileta.</textarea
+          >
+          <textarea name="Doctora" id="" cols="30" rows="7">
+  Tenemos una doctora que se encuentra a disponibilidad del establecimiento para cualquier emergencia que suceda en el horario de colonia.</textarea
+          >
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="row"></div>
+          <div class="col-md-6"></div>
+          <img
+            src="../imgs/grupal2023.jpeg"
+            class="grupal2023"
+            alt="fotogrupal2023"
+          />
+        </div>
+      </section>
+      <footer>
+        <p>Buscanos en las redes</p>
+        <div>
+          <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
+        </div>
+        <p>Colonia de vaciones Catalinas Sur</p>
+        <div>
+          <img src="../imgs/instagram.png" class="-facebook-" alt="instagram" />
+        </div>
+        <p>@coloniacatalinassur</p>
+        <div>
+          <img src="../imgs/gmail.png" class="-facebook-" alt="gmail" />
+        </div>
+        <p>coloniacatalinas@gmail.com</p>
+        <div class="footer-bottom">
+          &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
+          por Enriqueanzaldi
+        </div>
+      </footer>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
