--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -70,32 +70,40 @@
       </section>
       <section>
         <div class="container">
-          <div class="row"></div>
-          <div class="col-md-6"></div>
-          <img
-            src="../imgs/grupal2023.jpeg"
-            class="grupal2023"
-            alt="fotogrupal2023"
-          />
+          <div class="row">
+            <div class="col-sm-8">
+              <img
+                src="../imgs/grupal2023.jpeg"
+                class="grupal2023"
+                alt="fotogrupal2023"
+              />
+            </div>
+          </div>
         </div>
       </section>
       <footer>
-        <p>Buscanos en las redes</p>
-        <div>
-          <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
-        </div>
-        <p>Colonia de vaciones Catalinas Sur</p>
-        <div>
-          <img src="../imgs/instagram.png" class="-facebook-" alt="instagram" />
-        </div>
-        <p>@coloniacatalinassur</p>
-        <div>
-          <img src="../imgs/gmail.png" class="-facebook-" alt="gmail" />
-        </div>
-        <p>coloniacatalinas@gmail.com</p>
-        <div class="footer-bottom">
-          &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
-          por Enriqueanzaldi
+        <div class="container">
+          <p>Buscanos en las redes</p>
+          <div>
+            <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
+          </div>
+          <p>Colonia de vaciones Catalinas Sur</p>
+          <div>
+            <img
+              src="../imgs/instagram.png"
+              class="-facebook-"
+              alt="instagram"
+            />
+          </div>
+          <p>@coloniacatalinassur</p>
+          <div>
+            <img src="../imgs/gmail.png" class="-facebook-" alt="gmail" />
+          </div>
+          <p>coloniacatalinas@gmail.com</p>
+          <div class="footer-bottom">
+            &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
+            por Enriqueanzaldi
+          </div>
         </div>
       </footer>
     </div>
