--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     <div class="container-fluid">
       <header>
         <div class="container">
-          <div class="row"></div>
           <div class="header_1">
             <nav class="navbar">
               <ul class="nav__list">
@@ -105,12 +104,12 @@
               <p>@coloniacatalinassur</p>
               <img src="imgs/gmail.png" class="-facebook-" alt="gmail" />
               <p>coloniacatalinas@gmail.com</p>
+              <div class="footer-bottom">
+                &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> |
+                Creada por Enriqueanzaldi
+              </div>
             </div>
           </div>
-        </div>
-        <div class="footer-bottom">
-          &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
-          por Enriqueanzaldi
         </div>
       </footer>
     </div>
