--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -21,95 +21,124 @@
     <title>Actividades</title>
   </head>
   <body>
-    <header>
-      <div class="container">
-        <div class="header_1">
-          <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a class="nav__link" href="../index.html">inicio</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="actividades.html">Actividades</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="informacion.html">Información</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </nav>
+    <div class="container-fluid">
+      <header>
+        <div class="container">
+          <div class="header_1">
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="../index.html">inicio</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="actividades.html">Actividades</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="informacion.html">Información</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
-      </div>
-    </header>
-    <section>
-      <img src="../imgs/Logo.png" class="-logo-" alt="logo de la empresa" />
-      <h1>Actividades</h1>
-      <h2>Recreativas</h2>
-      <div>
-        <img src="../imgs/carreras.jpg" class="-carreras-" alt="carreras" />
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-          distinctio aliquam magni! Aliquid, fuga quod ipsum hic earum, animi
-          esse veritatis distinctio delectus dignissimos dolore laudantium sit
-          consequuntur doloremque cum.
-        </p>
-        <img
-          src="../imgs/juegos de equipo.jpg"
-          class="-carreras-"
-          alt="juegos-de-equipos"
-        />
-        <img src="../imgs/bailes.jpg" class="-carreras-" alt="bailes" />
-        <img
-          src="../imgs/cuentos y canciones.jpg"
-          class="-carreras-"
-          alt="cuentos-y-canciones"
-        />
-        <h3>Pileta</h3>
-        <img
-          src="../imgs/juegospileta.jpg"
-          class="-pileta-"
-          alt="juegos-pileta"
-        />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, ut.
-        </p>
-        <img src="../imgs/pileta.jpg" class="-pileta-" alt="pileta" />
-        <h4>Campamento + Jornada extendida</h4>
-        <img src="../imgs/campamento.jpg" class="-carreras-" alt="campamento" />
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime,
-          beatae.
-        </p>
-        <img src="../imgs/fogon.jpg" class="-carreras-" alt="fogon" />
-        <img
-          src="../imgs/jornada extendida.jpg"
-          class="-carreras-"
-          alt="-jornada-extendida-"
-        />
-      </div>
-    </section>
-    <footer>
-      <p>Buscanos en las redes</p>
-      <div>
-        <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
-      </div>
-      <p>Colonia de vacaciones Catalinas Sur</p>
-      <div>
-        <img src="../imgs/instagram.png" class="-facebook-" alt="instagram" />
-      </div>
-      <p>@Coloniacatalinassur</p>
-      <div><img src="../imgs/gmail.png" class="-facebook-" alt="gmail" /></div>
-      <p>coloniacatalinas@gmail.com</p>
-      <div class="footer-bottom">
-        &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada por
-        Enriqueanzaldi
-      </div>
-    </footer>
+      </header>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <img
+                src="../imgs/Logo.png"
+                class="-logo-"
+                alt="logo de la empresa"
+              />
+              <h1>Actividades</h1>
+              <h2>Recreativas</h2>
+              <div>
+                <img
+                  src="../imgs/carreras.jpg"
+                  class="-carreras-"
+                  alt="carreras"
+                />
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Consequatur distinctio aliquam magni! Aliquid, fuga quod ipsum
+                  hic earum, animi esse veritatis distinctio delectus
+                  dignissimos dolore laudantium sit consequuntur doloremque cum.
+                </p>
+                <img
+                  src="../imgs/juegos de equipo.jpg"
+                  class="-carreras-"
+                  alt="juegos-de-equipos"
+                />
+                <img src="../imgs/bailes.jpg" class="-carreras-" alt="bailes" />
+                <img
+                  src="../imgs/cuentos y canciones.jpg"
+                  class="-carreras-"
+                  alt="cuentos-y-canciones"
+                />
+                <h3>Pileta</h3>
+                <img
+                  src="../imgs/juegospileta.jpg"
+                  class="-pileta-"
+                  alt="juegos-pileta"
+                />
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Neque, ut.
+                </p>
+                <img src="../imgs/pileta.jpg" class="-pileta-" alt="pileta" />
+                <h4>Campamento + Jornada extendida</h4>
+                <img
+                  src="../imgs/campamento.jpg"
+                  class="-carreras-"
+                  alt="campamento"
+                />
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Maxime, beatae.
+                </p>
+                <img src="../imgs/fogon.jpg" class="-carreras-" alt="fogon" />
+                <img
+                  src="../imgs/jornada extendida.jpg"
+                  class="-carreras-"
+                  alt="-jornada-extendida-"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="container">
+          <p>Buscanos en las redes</p>
+          <div>
+            <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
+          </div>
+          <p>Colonia de vacaciones Catalinas Sur</p>
+          <div>
+            <img
+              src="../imgs/instagram.png"
+              class="-facebook-"
+              alt="instagram"
+            />
+          </div>
+          <p>@Coloniacatalinassur</p>
+          <div>
+            <img src="../imgs/gmail.png" class="-facebook-" alt="gmail" />
+          </div>
+          <p>coloniacatalinas@gmail.com</p>
+          <div class="footer-bottom">
+            &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
+            por Enriqueanzaldi
+          </div>
+        </div>
+      </footer>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
