--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
-              <p>Buscanos en las redes</p>
+              <p class="text">Buscanos en las redes</p>
               <img src="imgs/facebook.png" class="-facebook-" alt="facebook" />
               <p>Colonia de vacaciones Catalinas Sur</p>
               <img
