--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Colonia de vacaciones para niños de 3 a 13años"
+    />
+    <meta
+      name="keywords"
+      content="colonia, vacaciones, diversión, niños, pileta, juegos,"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
