--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -66,18 +66,17 @@
               />
               <h1>Actividades</h1>
               <h2>Recreativas</h2>
+              <p>
+                Contamos con actividades deportivas, taller de lectura,
+                canciones y desafíos de baile. Todas las actividades se realizan
+                con cada grupo y con los profes correspondientes.
+              </p>
               <div>
                 <img
                   src="../imgs/carreras.jpg"
                   class="-carreras-"
                   alt="carreras"
                 />
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Consequatur distinctio aliquam magni! Aliquid, fuga quod ipsum
-                  hic earum, animi esse veritatis distinctio delectus
-                  dignissimos dolore laudantium sit consequuntur doloremque cum.
-                </p>
                 <img
                   src="../imgs/juegos de equipo.jpg"
                   class="-carreras-"
@@ -90,26 +89,31 @@
                   alt="cuentos-y-canciones"
                 />
                 <h3>Pileta</h3>
+                <p>
+                  En la pileta tenemos cama elástica, mesa de ping pong,
+                  metegoles y un tobogan.
+                </p>
                 <img
                   src="../imgs/juegospileta.jpg"
                   class="-pileta-"
                   alt="juegos-pileta"
                 />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Neque, ut.
-                </p>
                 <img src="../imgs/pileta.jpg" class="-pileta-" alt="pileta" />
                 <h4>Campamento + Jornada extendida</h4>
+                <p>
+                  El campamento se desarrolla a partir de la salida de la salida
+                  de la colonia hasta el día siguiente a la mañana. Hay juegos
+                  nocturnos, juegos por equipos, pileta, cena, fogón y acampar.
+                </p>
+                <p>
+                  La jornada extendida se realiza hasta la misma noche en la
+                  cual termina con el fogón.
+                </p>
                 <img
                   src="../imgs/campamento.jpg"
                   class="-carreras-"
                   alt="campamento"
                 />
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Maxime, beatae.
-                </p>
                 <img src="../imgs/fogon.jpg" class="-carreras-" alt="fogon" />
                 <img
                   src="../imgs/jornada extendida.jpg"
