--- a/index.html
+++ b/index.html
@@ -33,94 +33,83 @@
     <title>Colonia Catalinas Sur</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <header>
-        <div class="container">
-          <div class="header_1">
-            <nav class="navbar">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a class="nav__link" href="index.html">inicio</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="pages/nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="pages/actividades.html"
-                    >Actividades</a
-                  >
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="pages/informacion.html"
-                    >Información</a
-                  >
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="pages/contacto.html">Contacto</a>
-                </li>
-              </ul>
-            </nav>
+    <header>
+      <div class="container">
+        <div class="header_1">
+          <nav class="navbar">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="index.html">inicio</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="pages/nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="pages/actividades.html"
+                  >Actividades</a
+                >
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="pages/informacion.html"
+                  >Información</a
+                >
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <img src="imgs/Logo.png" class="-logo-" alt="Logo de la empresa" />
+          </div>
+          <h1>Colonia Catalinas Sur</h1>
+          <p>
+            Bienvenidos a nuestra Colonia de vacaciones Catalina Sur. Un espacio
+            recreativo para que los chicos puedan divertirse y pasar una
+            temporada repleta de experiencias únicas. Contamos con materiales
+            para realizar todo tipo de juegos, dos piletas para actividades en
+            el agua y mucho más para que pases el mejor verano con nosotros.
+          </p>
+          <div>
+            <img
+              src="imgs/grupal2023.jpeg"
+              class="grupal2023"
+              alt="fotogrupal2023"
+            />
+            <img
+              src="imgs/equipo jefes.jpg"
+              class="equipo-jefes"
+              alt="equipo-jefes"
+            />
           </div>
         </div>
-      </header>
-      <section>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
-              <img
-                src="imgs/Logo.png"
-                class="-logo-"
-                alt="Logo de la empresa"
-              />
-            </div>
-            <h1>Colonia Catalinas Sur</h1>
-            <p>
-              Bienvenidos a nuestra Colonia de vacaciones Catalina Sur. Un
-              espacio recreativo para que los chicos puedan divertirse y pasar
-              una temporada repleta de experiencias únicas. Contamos con
-              materiales para realizar todo tipo de juegos, dos piletas para
-              actividades en el agua y mucho más para que pases el mejor verano
-              con nosotros.
-            </p>
-            <div>
-              <img
-                src="imgs/grupal2023.jpeg"
-                class="grupal2023"
-                alt="fotogrupal2023"
-              />
-              <img
-                src="imgs/equipo jefes.jpg"
-                class="equipo-jefes"
-                alt="equipo-jefes"
-              />
-            </div>
-          </div>
-        </div>
-      </section>
-      <footer>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
-              <p class="text">Buscanos en las redes</p>
-              <img src="imgs/facebook.png" class="-facebook-" alt="facebook" />
-              <p>Colonia de vacaciones Catalinas Sur</p>
-              <img
-                src="imgs/instagram.png"
-                class="-facebook-"
-                alt="instagram"
-              />
-              <p>@coloniacatalinassur</p>
-              <img src="imgs/gmail.png" class="-facebook-" alt="gmail" />
-              <p>coloniacatalinas@gmail.com</p>
-              <div class="footer-bottom">
-                &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> |
-                Creada por Enriqueanzaldi
-              </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <p class="text">Buscanos en las redes</p>
+            <img src="imgs/facebook.png" class="-facebook-" alt="facebook" />
+            <p>Colonia de vacaciones Catalinas Sur</p>
+            <img src="imgs/instagram.png" class="-facebook-" alt="instagram" />
+            <p>@coloniacatalinassur</p>
+            <img src="imgs/gmail.png" class="-facebook-" alt="gmail" />
+            <p>coloniacatalinas@gmail.com</p>
+            <div class="footer-bottom">
+              &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> |
+              Creada por Enriqueanzaldi
             </div>
           </div>
         </div>
-      </footer>
-    </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
