--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,127 +29,117 @@
     <title>Contacto</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <header>
-        <div class="container">
-          <div class="header_1">
-            <nav class="nav">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a class="nav__link" href="../index.html">inicio</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="actividades.html">Actividades</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="informacion.html">Información</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="contacto.html">Contacto</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+    <header>
+      <div class="container">
+        <div class="header_1">
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="../index.html">inicio</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="actividades.html">Actividades</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="informacion.html">Información</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-      </header>
-      <section>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
+      </div>
+    </header>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <img
+              src="../imgs/Logo.png"
+              class="-logo-"
+              alt="logo de la empresa"
+            />
+            <h1>Contacto</h1>
+            <div>
+              <img src="../imgs/walter.jpg" class="-walter-" alt="Encargado" />
+              <p>Walter (Encargado)</p>
               <img
-                src="../imgs/Logo.png"
-                class="-logo-"
-                alt="logo de la empresa"
+                src="../imgs/cristian.jpg"
+                class="-walter-"
+                alt="Coordinador"
               />
-              <h1>Contacto</h1>
-              <div>
-                <img
-                  src="../imgs/walter.jpg"
-                  class="-walter-"
-                  alt="Encargado"
-                />
-                <p>Walter (Encargado)</p>
-                <img
-                  src="../imgs/cristian.jpg"
-                  class="-walter-"
-                  alt="Coordinador"
-                />
-                <p>Cristian (Coordinador)</p>
-                <img
-                  src="../imgs/Mauro.jpeg"
-                  class="-walter-"
-                  alt="Coordinador"
-                />
-                <p>Mauro (Coordinador)</p>
-              </div>
+              <p>Cristian (Coordinador)</p>
+              <img
+                src="../imgs/Mauro.jpeg"
+                class="-walter-"
+                alt="Coordinador"
+              />
+              <p>Mauro (Coordinador)</p>
             </div>
           </div>
         </div>
-      </section>
-      <fieldset>
-        <div class="container">
-          <legend>Envíe su mensaje</legend>
-          <div>
-            <label for="Nombre">Nombre:</label>
-            <input type="text" name="nombre" />
-          </div>
-          <div>
-            <label for="apellido">Apellido</label>
-            <input type="text" name="apellido" />
-          </div>
-          <div>hombre</div>
-          <input type="radio" name="sexo" />
-          <div>mujer</div>
-          <input type="radio" name="sexo" />
-          <div>acepta los términos y condiciones</div>
-          <input type="checkbox" name="acepta" value="1" />
-          <div>
-            <label for="mensaje">mensaje</label>
-            <textarea name="mensaje" id="" cols="40" rows="10"></textarea>
-          </div>
-          <input type="submit" value="Enviar" />
-          <input type="reset" value="Borrar" />
-        </div>
-      </fieldset>
-      <div class="container">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.1027093826146!2d-58.36753488461442!3d-34.62684466622952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334cea4dcc6bf%3A0xb52e97db0ef9bd74!2sAsociacion%20Vecinal%20Catalinas%20Sur!5e0!3m2!1ses!2sar!4v1675185870499!5m2!1ses!2sar"
-          class="-volley-"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
       </div>
-      <footer>
-        <div class="container">
-          <p>Buscanos en las redes</p>
-          <div>
-            <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
-          </div>
-          <p>Colonia de vacaciones Catalinas Sur</p>
-          <div>
-            <img
-              src="../imgs/instagram.png"
-              class="-facebook-"
-              alt="instagram"
-            />
-          </div>
-          <p>@coloniacatalinassur</p>
-          <div>
-            <img src="../imgs/gmail.png" class="-facebook-" alt="gmail" />
-          </div>
-          <p>coloniacatalinas@gmail.com</p>
-          <div class="footer-bottom">
-            &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
-            por Enriqueanzaldi
-          </div>
+    </section>
+    <fieldset>
+      <div class="container">
+        <legend>Envíe su mensaje</legend>
+        <div>
+          <label for="Nombre">Nombre:</label>
+          <input type="text" name="nombre" />
         </div>
-      </footer>
+        <div>
+          <label for="apellido">Apellido</label>
+          <input type="text" name="apellido" />
+        </div>
+        <div>hombre</div>
+        <input type="radio" name="sexo" />
+        <div>mujer</div>
+        <input type="radio" name="sexo" />
+        <div>acepta los términos y condiciones</div>
+        <input type="checkbox" name="acepta" value="1" />
+        <div>
+          <label for="mensaje">mensaje</label>
+          <textarea name="mensaje" id="" cols="40" rows="10"></textarea>
+        </div>
+        <input type="submit" value="Enviar" />
+        <input type="reset" value="Borrar" />
+      </div>
+    </fieldset>
+    <div class="container">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.1027093826146!2d-58.36753488461442!3d-34.62684466622952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334cea4dcc6bf%3A0xb52e97db0ef9bd74!2sAsociacion%20Vecinal%20Catalinas%20Sur!5e0!3m2!1ses!2sar!4v1675185870499!5m2!1ses!2sar"
+        class="-volley-"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </div>
+    <footer>
+      <div class="container">
+        <p>Buscanos en las redes</p>
+        <div>
+          <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
+        </div>
+        <p>Colonia de vacaciones Catalinas Sur</p>
+        <div>
+          <img src="../imgs/instagram.png" class="-facebook-" alt="instagram" />
+        </div>
+        <p>@coloniacatalinassur</p>
+        <div>
+          <img src="../imgs/gmail.png" class="-facebook-" alt="gmail" />
+        </div>
+        <p>coloniacatalinas@gmail.com</p>
+        <div class="footer-bottom">
+          &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
+          por Enriqueanzaldi
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
