--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -29,128 +29,122 @@
     <title>Actividades</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <header>
-        <div class="container">
-          <div class="header_1">
-            <nav class="nav">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a class="nav__link" href="../index.html">inicio</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="actividades.html">Actividades</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="informacion.html">Información</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="contacto.html">Contacto</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+    <header>
+      <div class="container">
+        <div class="header_1">
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="../index.html">inicio</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="actividades.html">Actividades</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="informacion.html">Información</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-      </header>
-      <section>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
+      </div>
+    </header>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <img
+              src="../imgs/Logo.png"
+              class="-logo-"
+              alt="logo de la empresa"
+            />
+            <h1>Actividades</h1>
+            <h2>Recreativas</h2>
+            <p>
+              Contamos con actividades deportivas, taller de lectura, canciones
+              y desafíos de baile. Todas las actividades se realizan con cada
+              grupo y con los profes correspondientes.
+            </p>
+            <div>
               <img
-                src="../imgs/Logo.png"
-                class="-logo-"
-                alt="logo de la empresa"
+                src="../imgs/carreras.jpg"
+                class="-carreras-"
+                alt="carreras"
               />
-              <h1>Actividades</h1>
-              <h2>Recreativas</h2>
+              <img
+                src="../imgs/juegos de equipo.jpg"
+                class="-carreras-"
+                alt="juegos-de-equipos"
+              />
+              <img src="../imgs/bailes.jpg" class="-carreras-" alt="bailes" />
+              <img
+                src="../imgs/cuentos y canciones.jpg"
+                class="-carreras-"
+                alt="cuentos-y-canciones"
+              />
+              <h3>Pileta</h3>
               <p>
-                Contamos con actividades deportivas, taller de lectura,
-                canciones y desafíos de baile. Todas las actividades se realizan
-                con cada grupo y con los profes correspondientes.
+                En la pileta tenemos cama elástica, mesa de ping pong, metegoles
+                y un tobogan.
               </p>
-              <div>
-                <img
-                  src="../imgs/carreras.jpg"
-                  class="-carreras-"
-                  alt="carreras"
-                />
-                <img
-                  src="../imgs/juegos de equipo.jpg"
-                  class="-carreras-"
-                  alt="juegos-de-equipos"
-                />
-                <img src="../imgs/bailes.jpg" class="-carreras-" alt="bailes" />
-                <img
-                  src="../imgs/cuentos y canciones.jpg"
-                  class="-carreras-"
-                  alt="cuentos-y-canciones"
-                />
-                <h3>Pileta</h3>
-                <p>
-                  En la pileta tenemos cama elástica, mesa de ping pong,
-                  metegoles y un tobogan.
-                </p>
-                <img
-                  src="../imgs/juegospileta.jpg"
-                  class="-pileta-"
-                  alt="juegos-pileta"
-                />
-                <img src="../imgs/pileta.jpg" class="-pileta-" alt="pileta" />
-                <h4>Campamento + Jornada extendida</h4>
-                <p>
-                  El campamento se desarrolla a partir de la salida de la salida
-                  de la colonia hasta el día siguiente a la mañana. Hay juegos
-                  nocturnos, juegos por equipos, pileta, cena, fogón y acampar.
-                </p>
-                <p>
-                  La jornada extendida se realiza hasta la misma noche en la
-                  cual termina con el fogón.
-                </p>
-                <img
-                  src="../imgs/campamento.jpg"
-                  class="-carreras-"
-                  alt="campamento"
-                />
-                <img src="../imgs/fogon.jpg" class="-carreras-" alt="fogon" />
-                <img
-                  src="../imgs/jornada extendida.jpg"
-                  class="-carreras-"
-                  alt="-jornada-extendida-"
-                />
-              </div>
+              <img
+                src="../imgs/juegospileta.jpg"
+                class="-pileta-"
+                alt="juegos-pileta"
+              />
+              <img src="../imgs/pileta.jpg" class="-pileta-" alt="pileta" />
+              <h4>Campamento + Jornada extendida</h4>
+              <p>
+                El campamento se desarrolla a partir de la salida de la salida
+                de la colonia hasta el día siguiente a la mañana. Hay juegos
+                nocturnos, juegos por equipos, pileta, cena, fogón y acampar.
+              </p>
+              <p>
+                La jornada extendida se realiza hasta la misma noche en la cual
+                termina con el fogón.
+              </p>
+              <img
+                src="../imgs/campamento.jpg"
+                class="-carreras-"
+                alt="campamento"
+              />
+              <img src="../imgs/fogon.jpg" class="-carreras-" alt="fogon" />
+              <img
+                src="../imgs/jornada extendida.jpg"
+                class="-carreras-"
+                alt="-jornada-extendida-"
+              />
             </div>
           </div>
         </div>
-      </section>
-      <footer>
-        <div class="container">
-          <p>Buscanos en las redes</p>
-          <div>
-            <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
-          </div>
-          <p>Colonia de vacaciones Catalinas Sur</p>
-          <div>
-            <img
-              src="../imgs/instagram.png"
-              class="-facebook-"
-              alt="instagram"
-            />
-          </div>
-          <p>@Coloniacatalinassur</p>
-          <div>
-            <img src="../imgs/gmail.png" class="-facebook-" alt="gmail" />
-          </div>
-          <p>coloniacatalinas@gmail.com</p>
-          <div class="footer-bottom">
-            &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
-            por Enriqueanzaldi
-          </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <p>Buscanos en las redes</p>
+        <div>
+          <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
         </div>
-      </footer>
-    </div>
+        <p>Colonia de vacaciones Catalinas Sur</p>
+        <div>
+          <img src="../imgs/instagram.png" class="-facebook-" alt="instagram" />
+        </div>
+        <p>@Coloniacatalinassur</p>
+        <div>
+          <img src="../imgs/gmail.png" class="-facebook-" alt="gmail" />
+        </div>
+        <p>coloniacatalinas@gmail.com</p>
+        <div class="footer-bottom">
+          &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
+          por Enriqueanzaldi
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
