--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -29,114 +29,107 @@
     <title>Información General</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <header>
-        <div class="container">
-          <div class="header_1">
-            <nav class="nav">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a class="nav__link" href="../index.html">inicio</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="actividades.html">Actividades</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="informacion.html">informacion</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="contacto.html">Contacto</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+    <header>
+      <div class="container">
+        <div class="header_1">
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="../index.html">inicio</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="actividades.html">Actividades</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="informacion.html">informacion</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-      </header>
-      <section>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
+      </div>
+    </header>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <img
+              src="../imgs/Logo.png"
+              class="-logo-"
+              alt="Logo de la empresa"
+            />
+            <h1>Información general</h1>
+            <p>
+              La Colonia de vacaciones Catalina sur permanece en funcionamiento
+              desde fines de diciembre hasta fines de febrero. Para formar parte
+              solo tenes que llenar el formulario, durante el periodo
+              correspondiente de inscripciones, y venir a abonar únicamente por
+              quincena o por semana. Los grupos son a partir de los 3 años (sin
+              uso de pañales) hasta los 13 años. Los chicos ingresarán a la
+              pileta durante turnos de 40 minutos. Es obligatorio el uso de
+              gorrito para agua aquellos que tengan el pelo largo (por los
+              hombros) para la higiene y el mantenimiento de la misma (se
+              realizará una revisión médica, previa a ingresar que durará un
+              mes) Para las familias que quieran disfrutar un día en nuestro
+              establecimiento, pueden venir y abonar al club. Aquellos niños que
+              estén en su periodo de colono, no deberán pagar, (únicamente el
+              colono podrá pasar libre). Los turnos a la pileta serán siempre
+              bajo la supervisión de guardavidas quienes estarán al pendiente
+              del cuidado de los chicos, y a su vez se cuenta con la atención de
+              un/a doctor/a que brindará asistencia médica en caso de que sea
+              necesario. Los chicos que se quedan durante el almuerzo (12hs a
+              13hs) deberán traer una vianda de comida, (la cual podrá ser
+              calentada en caso de que la comida no pueda servirse fria).
+            </p>
+            <div>
+              <img src="../imgs/club.jpg" class="-club-" alt="club" />
               <img
-                src="../imgs/Logo.png"
-                class="-logo-"
-                alt="Logo de la empresa"
+                src="../imgs/campamento.jpg"
+                class="-club-"
+                alt="campamento"
               />
-              <h1>Información general</h1>
-              <p>
-                La Colonia de vacaciones Catalina sur permanece en
-                funcionamiento desde fines de diciembre hasta fines de febrero.
-                Para formar parte solo tenes que llenar el formulario, durante
-                el periodo correspondiente de inscripciones, y venir a abonar
-                únicamente por quincena o por semana. Los grupos son a partir de
-                los 3 años (sin uso de pañales) hasta los 13 años. Los chicos
-                ingresarán a la pileta durante turnos de 40 minutos. Es
-                obligatorio el uso de gorrito para agua aquellos que tengan el
-                pelo largo (por los hombros) para la higiene y el mantenimiento
-                de la misma (se realizará una revisión médica, previa a ingresar
-                que durará un mes) Para las familias que quieran disfrutar un
-                día en nuestro establecimiento, pueden venir y abonar al club.
-                Aquellos niños que estén en su periodo de colono, no deberán
-                pagar, (únicamente el colono podrá pasar libre). Los turnos a la
-                pileta serán siempre bajo la supervisión de guardavidas quienes
-                estarán al pendiente del cuidado de los chicos, y a su vez se
-                cuenta con la atención de un/a doctor/a que brindará asistencia
-                médica en caso de que sea necesario. Los chicos que se quedan
-                durante el almuerzo (12hs a 13hs) deberán traer una vianda de
-                comida, (la cual podrá ser calentada en caso de que la comida no
-                pueda servirse fria).
-              </p>
-              <div>
-                <img src="../imgs/club.jpg" class="-club-" alt="club" />
-                <img
-                  src="../imgs/campamento.jpg"
-                  class="-club-"
-                  alt="campamento"
-                />
-                <img
-                  src="../imgs/cancha de volley.jpg"
-                  class="-volley-"
-                  alt="volley"
-                />
-                <img
-                  src="../imgs/campamento2.jpg"
-                  class="-volley-"
-                  alt="campamento"
-                />
-                <img src="../imgs/pileta.jpg" class="-pileta2-" alt="pileta" />
-              </div>
+              <img
+                src="../imgs/cancha de volley.jpg"
+                class="-volley-"
+                alt="volley"
+              />
+              <img
+                src="../imgs/campamento2.jpg"
+                class="-volley-"
+                alt="campamento"
+              />
+              <img src="../imgs/pileta.jpg" class="-pileta2-" alt="pileta" />
             </div>
           </div>
         </div>
-      </section>
-      <footer>
-        <div class="container">
-          <p>Buscanos en las redes</p>
-          <div>
-            <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
-          </div>
-          <p>Colonia de vacaciones Catalinas Sur</p>
-          <div>
-            <img
-              src="../imgs/instagram.png"
-              class="-facebook-"
-              alt="instagram"
-            />
-          </div>
-          <p>@coloniacataliassur</p>
-          <div>
-            <img src="../imgs/gmail.png" class="-facebook-" alt="gmail" />
-          </div>
-          <p>coloniacatalinas@gmail.com</p>
-          <div class="footer-bottom">
-            &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
-            por Enriqueanzaldi
-          </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <p>Buscanos en las redes</p>
+        <div>
+          <img src="../imgs/facebook.png" class="-facebook-" alt="facebook" />
         </div>
-      </footer>
-    </div>
+        <p>Colonia de vacaciones Catalinas Sur</p>
+        <div>
+          <img src="../imgs/instagram.png" class="-facebook-" alt="instagram" />
+        </div>
+        <p>@coloniacataliassur</p>
+        <div>
+          <img src="../imgs/gmail.png" class="-facebook-" alt="gmail" />
+        </div>
+        <p>coloniacatalinas@gmail.com</p>
+        <div class="footer-bottom">
+          &copy; Copyright 2023 <a href="#">Colonia Catalinas Sur</a> | Creada
+          por Enriqueanzaldi
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
